fix modal z-index

--- a/frontend/src/styles/Modal/Modal.css
+++ b/frontend/src/styles/Modal/Modal.css
@@ -31,7 +31,7 @@
     padding: 24px;
     border-radius: 12px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.75);
-    z-index: 100;
+    z-index: 101;
     max-height: 75vh;
     max-width: 75vw;
     animation: modalFadeIn 0.25s ease-out;
